[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Theme/darkred_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Theme/Merchant Panel/PanelForegroundTabStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/Theme/Merchant Panel/MerchantPanelStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://UI/Theme/Merchant Panel/PanelBackgroundTabStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://UI/Menu/Merchant/MerchantItem.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/Menu/Merchant/SellRow.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Menu/Merchant/Merchant.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 8.0
content_margin_bottom = 6.0
bg_color = Color( 0.2, 0.223529, 0.254902, 1 )

[node name="MerchantUI" type="TabContainer"]
margin_top = 0.297302
margin_right = 368.0
margin_bottom = 234.297
rect_min_size = Vector2( 548, 300 )
theme = ExtResource( 1 )
custom_styles/tab_fg = ExtResource( 3 )
custom_styles/tab_bg = ExtResource( 5 )
custom_styles/panel = ExtResource( 4 )
tab_align = 0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 28.0
margin_right = -9.0
margin_bottom = -6.0
rect_min_size = Vector2( 436, 200 )

[node name="Buy" type="VBoxContainer" parent="Buy"]
margin_right = 530.0
margin_bottom = 266.0

[node name="Row1" type="HBoxContainer" parent="Buy/Buy"]
margin_right = 530.0
margin_bottom = 110.0
alignment = 1

[node name="MerchantItem" parent="Buy/Buy/Row1" instance=ExtResource( 6 )]
margin_left = 53.0
margin_right = 133.0
margin_bottom = 110.0

[node name="MerchantItem2" parent="Buy/Buy/Row1" instance=ExtResource( 6 )]
margin_left = 139.0
margin_right = 219.0
margin_bottom = 110.0

[node name="MerchantItem3" parent="Buy/Buy/Row1" instance=ExtResource( 6 )]
margin_left = 225.0
margin_right = 305.0
margin_bottom = 110.0

[node name="MerchantItem4" parent="Buy/Buy/Row1" instance=ExtResource( 6 )]
margin_left = 311.0
margin_right = 391.0
margin_bottom = 110.0

[node name="MerchantItem5" parent="Buy/Buy/Row1" instance=ExtResource( 6 )]
margin_left = 397.0
margin_right = 477.0
margin_bottom = 110.0

[node name="Row2" type="HBoxContainer" parent="Buy/Buy"]
margin_top = 116.0
margin_right = 530.0
margin_bottom = 116.0
alignment = 1

[node name="Sell Minerals" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 28.0
margin_right = -9.0
margin_bottom = -6.0
rect_min_size = Vector2( 436, 200 )

[node name="VBoxContainer" type="VBoxContainer" parent="Sell Minerals"]
margin_right = 530.0
margin_bottom = 266.0

[node name="ScrollContainer" type="ScrollContainer" parent="Sell Minerals/VBoxContainer"]
margin_right = 532.0
margin_bottom = 198.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SellVbox" type="VBoxContainer" parent="Sell Minerals/VBoxContainer/ScrollContainer"]
margin_right = 522.0
margin_bottom = 222.0

[node name="SellRow" parent="Sell Minerals/VBoxContainer/ScrollContainer/SellVbox" instance=ExtResource( 7 )]
margin_right = 522.0

[node name="SellRow2" parent="Sell Minerals/VBoxContainer/ScrollContainer/SellVbox" instance=ExtResource( 7 )]
margin_top = 38.0
margin_right = 522.0
margin_bottom = 70.0

[node name="SellRow3" parent="Sell Minerals/VBoxContainer/ScrollContainer/SellVbox" instance=ExtResource( 7 )]
margin_top = 76.0
margin_right = 522.0
margin_bottom = 108.0

[node name="SellRow4" parent="Sell Minerals/VBoxContainer/ScrollContainer/SellVbox" instance=ExtResource( 7 )]
margin_top = 114.0
margin_right = 522.0
margin_bottom = 146.0

[node name="SellRow5" parent="Sell Minerals/VBoxContainer/ScrollContainer/SellVbox" instance=ExtResource( 7 )]
margin_top = 152.0
margin_right = 522.0
margin_bottom = 184.0

[node name="SellRow6" parent="Sell Minerals/VBoxContainer/ScrollContainer/SellVbox" instance=ExtResource( 7 )]
margin_top = 190.0
margin_right = 522.0
margin_bottom = 222.0

[node name="HSeparator" type="HSeparator" parent="Sell Minerals/VBoxContainer"]
margin_top = 204.0
margin_right = 532.0
margin_bottom = 208.0

[node name="TotalPrice" type="Label" parent="Sell Minerals/VBoxContainer"]
margin_top = 214.0
margin_right = 532.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.34902, 0.756863, 0.207843, 1 )
text = "$0"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Sell Minerals/VBoxContainer"]
margin_top = 242.0
margin_right = 532.0
margin_bottom = 266.0
alignment = 2

[node name="SellAllButton" type="Button" parent="Sell Minerals/VBoxContainer/HBoxContainer"]
margin_left = 382.0
margin_right = 474.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Sell All"

[node name="Button" type="Button" parent="Sell Minerals/VBoxContainer/HBoxContainer"]
margin_left = 480.0
margin_right = 532.0
margin_bottom = 24.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Sell"

[node name="PopupDialog" type="ConfirmationDialog" parent="Sell Minerals"]
margin_left = 111.0
margin_top = 80.0
margin_right = 419.0
margin_bottom = 185.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 105 )
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
popup_exclusive = true
window_title = "Sell All?"
dialog_text = "This will sell all Minerals.

You will receive: "

[connection signal="tab_changed" from="." to="." method="_on_MerchantUI_tab_changed"]
[connection signal="pressed" from="Sell Minerals/VBoxContainer/HBoxContainer/SellAllButton" to="." method="_on_SellAllButton_pressed"]
[connection signal="pressed" from="Sell Minerals/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="confirmed" from="Sell Minerals/PopupDialog" to="." method="_on_PopupDialog_confirmed"]
